--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -33,4 +33,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/deployment :1.0.0
+          tags: ${{ ksammo/deployment :1.0.0
